# treino_streamlit

./: README.md  funcionarios.db  main.py  pyproject.toml
src/: __init__.py  database.py  schema.py
test/: test_app.py  test_schema.py
testes/: test_app.py
”/home/giovani/.pyenv”/shims/: pydoc3
”/home/giovani/.pyenv”/versions/3.12.6/include/python3.12/: pyconfig.h
”/home/giovani/.pyenv”/versions/3.12.6/lib/pkgconfig/: python-3.12-embed.pc  python-3.12.pc
”/home/giovani/.pyenv”/versions/3.12.6/lib/python3.12/: _sysconfigdata__linux_x86_64-linux-gnu.py
”/home/giovani/.pyenv”/versions/3.12.6/lib/python3.12/config-3.12-x86_64-linux-gnu/: Makefile  Setup.stdlib  python-config.py
