[tool.poetry]
name = "treino-streamlit"
version = "0.1.0"
description = ""
authors = ["Giovani Stefani <gstefani@infointelligence.com.br>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
streamlit = "^1.39.0"
black = "^24.10.0"
isort = "^5.13.2"
pydocstyle = "^6.3.0"
mkdoc = "^0.1"
pip-audit = "^2.7.3"
pre-commit = "^4.0.1"
taskipy = "^1.13.0"
selenium = "^4.25.0"
pytest = "^8.3.3"
pydantic = {extras = ["email"], version = "^2.9.2"}
sqlalchemy = "^2.0.35"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.taskipy.tasks]
format = "black . && isort ."
check = "pydocstyle && pip-audit"